
[package]
name = "wrinkly-os"
version = "0.1.0"
edition = "2021"

# the profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for 'caargo build --release'
[profile.release]
panic = "abort" # disables stack unwinding on panic

[dependencies]
bootloader = "0.9.23"
fmt = "0.1.0"
volatile = "0.2.6"
