
[package]
name = "wrinkly-os"
version = "0.1.0"
edition = "2021"

# the profile used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for 'caargo build --release'
[profile.release]
panic = "abort" # disables stack unwinding on panic

[dependencies]
bootloader = "0.9.23"
spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
